welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  motif()
}

def motif() {
  var T = new array[Color] (getMondeHauteur)
  
  for (i<-0 to T.length()-2) {
    T(i) = getCouleurSol()
    avance()
  }
  T(T.length()-1) = getCouleurSol()
  recule(T.length())
}